# webReranker

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README_SELECTORS.md  SELECTOR_ANALYSIS.md  analyze_feedback.py  pyproject.toml  server.py  web_parser.py
firefox_extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  selectors.json
