[project]
name = "webReranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy", 
    "pandas",
    "scikit-learn>=1.8.0",
    "langgraph",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "ollama>=0.2.0",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "jsonschema>=4.0.0"]
